# trans-latin

./: CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM.md  Makefile  README.md  ROADMAP.md  SECURITY.md  lege.md  pyproject.toml
.github/workflows/: full-qa.yml  latin-unit-audit.yml  package-smoke.yml  release-artifacts.yml  translation-audit.yml
audit/events/: TLA-EVENT-2026-000001.json
audit/sessions/: TLA-SESSION-2026-000001.json
corpus/registrum/: testimonia.csv
corpus/witnesses/: DEMO-W01.json
docs/: translation-audit-pipeline.md
docs/architecture/: language-processing-repo-boundary.md  shared-translator-spine.md  synchronous_translation_audit.md
docs/governance/: auditability-standard.md
docs/methodology/: latin_normalization_policy.md  latin_transcription_policy.md
docs/operations/: release_operations.md
processing_handoffs/: TLA-HANDOFF-2026-000001.json
ratio/: norma.md
records/: TL-2026-000001.json
schemas/: audit_event.schema.json  audit_manifest.schema.json  latin_translation_unit.schema.json  processing_handoff.schema.json  translation_record.schema.json  translation_session.schema.json  witness.schema.json
scripts/: validate_translation_records.py
scripts/export/: export_review_packet.py  generate_audit_manifest.py  stage_release_bundle.py
scripts/qa/: check_audit_chain.py  check_package_smoke.py  check_release_bundle.py  check_required_spine.py  check_rights_sensitive_files.py  check_unit_ids.py  generate_status_report.py  validate_audit_events.py  validate_audit_manifest.py  (+4 more)
translations/: TLA-DEMO-W01-P001-L001.json
(+5 files in other folders)
